--- a/css/advantages.css
+++ b/css/advantages.css
@@ -15,6 +15,8 @@ padding: 80px 0 ;
     text-align: center;
     color: #86878B;
     margin: 34px;
+    font-family: 'Open Sans';
+    font-weight: 100;
 
 }
 .advantages__wrap {
@@ -56,8 +58,12 @@ padding: 80px 0 ;
     color: #333333;
     margin-bottom: 16px;
     text-transform: capitalize;
+    font-family: 'Open Sans';
+    font-weight: 700;
 
 }
 .card__text {
     text-align: center;
+    font-family: 'Open Sans';
+    font-weight: 400;
 }
