--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 @import url(../css/header.css);
 @import url(../css/advantages.css);
 @import url(../css/pricing.css);
+@import url(../css/import.css);
 * {
     padding: 0;
     margin: 0;
@@ -19,5 +20,10 @@
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 34px;
+    font-family: 'Raleway';
+    font-weight: 400;
 
+}
+html {
+    font-family: 'Open Sans', 'Raleway', sans-serif;
 }
