--- a/css/pricing.css
+++ b/css/pricing.css
@@ -21,9 +21,12 @@
 .pricing__wrap {
     display: flex;
     justify-content: space-between;
+    
 }
 .list {
     text-align: center;
+    margin: 0 15px;
+    flex-wrap: wrap;
     
 }
 .list__tariff {
