--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 @import url(../css/advantages.css);
 @import url(../css/pricing.css);
 @import url(../css/import.css);
+@import url(../css/AXURE.css);
 
 * {
     padding: 0;
