--- a/css/customers.css
+++ b/css/customers.css
@@ -29,15 +29,20 @@
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 0 -15px;
+    align-items: flex-end;
+
+
 }
 .feedback {
     border: 1px solid white;
+    margin: 0 15px;
+    width: 300px;
+    
+    
+    
     
 }
 .feedback__content {
-    width: 300px;
-    margin: 0 15px;
-    
     
 }
 .feedback__text {
@@ -58,7 +63,7 @@
     display: block;
     position: absolute;
     top: 100%;
-    left: 23%;
+    left: 20%;
     width: 0;
     height: 0;
     border-top: 10px solid transparent;
@@ -70,12 +75,10 @@
 }
 
 .feedback__img {
-    margin-bottom: 30px;
     width: 70px;
     height: 70px;
     border: 1px solid #ffffff;
     border-radius: 50%;
-    margin: 0 45px 0;
     overflow: hidden;
 }
 
@@ -87,7 +90,7 @@
 
 .feedback__card {
     display:flex ;
-    flex-direction: row;
+    justify-content: space-around;
     margin-top: 22px;
 }
 
@@ -95,11 +98,11 @@
     
 }
 
+
 .user__name {
     text-align: center;
     font-size: 20px;
     color: #333333;
-    margin-bottom: 16px;
     text-transform: capitalize;
     font-family: 'Open Sans';
     font-weight: 700;
@@ -110,4 +113,5 @@
     font-weight: 400;
     font-size: 14px;
     color: #86878B;
+    margin-top: 16px;
 }
