--- a/css/index.css
+++ b/css/index.css
@@ -4,14 +4,20 @@
 @import url(../css/pricing.css);
 @import url(../css/import.css);
 @import url(../css/AXURE.css);
+@import url(../css/social.css);
+@import url(../css/footer.css);
+@import url(../css/main.css);
+@import url(../css/contact.css);
+@import url(../css/media.css);
 
-* {
+*{
     padding: 0;
     margin: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
 }
+
 .container {
     max-width: 1170px;
     margin: auto;
