--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@
 @import url(../css/main.css);
 @import url(../css/contact.css);
 @import url(../css/media.css);
+@import url(../css/tabs.css);
+
 
 *{
     padding: 0;
